pkg/provider/kubernetes/ingress/fixtures/Ingress-with-service-with-externalName-enabled_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - host: traefik.tchouk
    http:
      paths:
      - path: /bar
        backend:
          service:
            name: service1
            port:
              number: 8080
        pathType: Prefix
